--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="favicon-32x32.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="favicon-16x16.png"
+        />
+        <link rel="manifest" href="site.webmanifest" />
+        <link rel="mask-icon" href="safari-pinned-tab.png" color="#ffffff" />
+        <meta name="apple-mobile-web-app-title" content="Hazel Grace Styles" />
+        <meta name="application-name" content="Hazel Grace Styles" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta name="theme-color" content="#ffffff" />
         <meta
             name="description"
             content="We are a contemporary African luxury fashion and
@@ -24,10 +44,6 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
         <title>Hazel Grace Styles</title>
     </head>
     <body>
