--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             sizes="16x16"
             href="favicon-16x16.png"
         />
-        <link rel="manifest" href="site.webmanifest" />
+
         <link rel="mask-icon" href="safari-pinned-tab.png" color="#ffffff" />
         <meta name="apple-mobile-web-app-title" content="Hazel Grace Styles" />
         <meta name="application-name" content="Hazel Grace Styles" />
@@ -44,6 +44,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Hazel Grace Styles</title>
     </head>
     <body>
