--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         ></script>
         <script type="text/javascript">
             (function () {
-                emailjs.init('NadKuQM6677lL9__h');
+                emailjs.init('tg7ERiwud9xjrmGpl');
             })();
         </script>
     </head>
